@@ -18,7 +18,7 @@ import { Handle, NodeProps, NodeResizer, Position } from 'reactflow';
 import { Label } from '../Label';
 import { useConnector } from '../connector/useConnector';
 import { useDrop } from '../drop/useDrop';
-import { NodePalette } from '../palette/NodePalette';
+import { DiagramElementPalette } from '../palette/DiagramElementPalette';
 import { ListNodeData } from './ListNode.types';
 
 const listNodeStyle = (
@@ -66,7 +66,7 @@ export const ListNode = memo(({ data, isConnectable, id, selected }: NodeProps<L
         onDrop={handleOnDrop}
         data-testid={`List - ${data?.label?.text}`}>
         {data.label ? <Label diagramElementId={id} label={data.label} faded={data.faded} transform="" /> : null}
-        {selected ? <NodePalette diagramElementId={id} labelId={data.label?.id ?? null} /> : null}
+        {selected ? <DiagramElementPalette diagramElementId={id} labelId={data.label ? data.label.id : null} /> : null}
         <Handle
           id={`handle--${id}--top`}
           type="source"
