@@ -18,7 +18,7 @@ import { Handle, NodeProps, NodeResizer, Position } from 'reactflow';
 import { Label } from '../Label';
 import { useConnector } from '../connector/useConnector';
 import { useDrop } from '../drop/useDrop';
-import { NodePalette } from '../palette/NodePalette';
+import { DiagramElementPalette } from '../palette/DiagramElementPalette';
 import { RectangularNodeData } from './RectangularNode.types';
 
 const rectangularNodeStyle = (
@@ -63,7 +63,7 @@ export const RectangularNode = memo(({ data, isConnectable, id, selected }: Node
         onDrop={handleOnDrop}
         data-testid={`Rectangle - ${data?.label?.text}`}>
         {data.label ? <Label diagramElementId={id} label={data.label} faded={data.faded} transform="" /> : null}
-        {selected ? <NodePalette diagramElementId={id} labelId={data.label ? data.label.id : null} /> : null}
+        {selected ? <DiagramElementPalette diagramElementId={id} labelId={data.label ? data.label.id : null} /> : null}
         <Handle
           id={`handle--${id}--top`}
           type="source"
