@@ -11,7 +11,20 @@
  *     Obeo - initial API and implementation
  *******************************************************************************/
 
-export interface NodePaletteProps {
-  diagramElementId: string;
-  labelId: string | null;
+export interface DiagramElementPaletteContextValue {
+  x: number | null;
+  y: number | null;
+  isOpened: boolean;
+  showDiagramElementPalette: (x: number, y: number) => void;
+  hideDiagramElementPalette: () => void;
+}
+
+export interface DiagramElementPaletteContextProviderProps {
+  children: React.ReactNode;
+}
+
+export interface DiagramElementPaletteContextProviderState {
+  x: number | null;
+  y: number | null;
+  isOpened: boolean;
 }
